Project ready for review
linter and html validator fixed
typos fixed
Readme file modified

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <a class="nav-item nav-link border-right p-0" href="#">The Debate</a>
       <a class="nav-item nav-link border-right p-0" href="#">Vantage</a>
       <a class="nav-item nav-link border-right p-0" href="#">Weather</a>
-      <input type="search" placeholder="Search" class="nav-item nav-link border-right" href="#" />
+      <input type="search" placeholder="Search" class="nav-item nav-link border-right" />
     </nav>
   </header>
 
@@ -205,7 +205,7 @@
         </section>
 
         <section class="sponsored col-sm-12 my-2">
-
+          <h2 class="d-none">sponsored</h2>
           <div class="py-4">
             <div>
               <a href="#"><img src="assets/img-sponsored1/roborock-h6.jpg" alt=""></a>
@@ -419,60 +419,55 @@
           <div class="row row-cols-3">
             <figure class="col-12 col-md-4 px-md-1 mb-md-4">
               <a href="#"><img class="img-fluid" src="assets/img-heroes-culture/isaac.jpg" alt="isaac"></a>
-              <a href="#">
-                <figcaption class="pt-3">The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers
-                </figcaption>
-              </a>
+              <figcaption class="pt-3"><a href="#">The Doctors and Nurses Crossing the Border Daily to Help Asylum
+                  Seekers</a>
+              </figcaption>
+
             </figure>
             <figure class="col-12 col-md-4 px-md-1">
               <a href="#"><img class="img-fluid" src="assets/img-heroes-culture/evan-rosenberg.jpg" alt="evan"></a>
-              <a href="#">
-                <figcaption class="pt-3">The Charity Helping Vulnerable Holocaust Survivors During the Pandemic
-                </figcaption>
-              </a>
+              <figcaption class="pt-3"><a href="#">The Charity Helping Vulnerable Holocaust Survivors During the
+                  Pandemic</a>
+              </figcaption>
             </figure>
             <figure class="col-12 col-md-4 px-md-1">
               <a href="#"><img class="img-fluid" src="assets/img-heroes-culture/tamara-mcgovern.jpg" alt="tamara"></a>
-              <a href="#">
-                <figcaption class="pt-3">Women Launch Campaign Urging People to Donate Their Stimulus Checks
-                </figcaption>
-              </a>
+              <figcaption class="pt-3"><a href="#">Women Launch Campaign Urging People to Donate Their Stimulus
+                  Checks</a>
+              </figcaption>
             </figure>
             <h2 class="pt-3 col-12">Culture & Travel</h2>
             <figure class="col-12 col-md-4 px-md-1">
               <a href="#"><img class="img-fluid" src="assets/img-heroes-culture/bark-europa-tall-ship.jpg"
                   alt="ship"></a>
-              <a href="#">
-                <figcaption class="pt-3">TTall Ship Sails 10,000 Miles From the End of the World During COVID-19
-                </figcaption>
-              </a>
+              <figcaption class="pt-3"><a href="#">Tall Ship Sails 10,000 Miles From the End of the World During
+                  COVID-19</a>
+              </figcaption>
             </figure>
             <figure class="col-12 col-md-4 px-md-1">
               <a href="#"><img class="img-fluid" src="assets/img-heroes-culture/gorilla.jpg" alt="gorilla"></a>
-              <a href="#">
-                <figcaption class="pt-3">How Coronavirus—and Lack of Tourism—Impact East Africa's Gorillas
-                </figcaption>
-              </a>
+              <figcaption class="pt-3"><a href="#">How Coronavirus—and Lack of Tourism—Impact East Africa's
+                  Gorillas</a>
+              </figcaption>
             </figure>
             <figure class="col-12 col-md-4 px-md-1">
               <a href="#"><img class="img-fluid"
                   src="assets/img-heroes-culture/manhattan-beach-california-family-photo.jpg" alt="beach"></a>
-              <a href="#">
-                <figcaption class="pt-3">What Beaches Are Open Now? What to Know Before You Go
-                </figcaption>
-              </a>
+              <figcaption class="pt-3"><a href="#">What Beaches Are Open Now? What to Know Before You Go</a>
+              </figcaption>
             </figure>
           </div>
         </section>
 
         <section class="sign col-sm-12 my-3 col-md-7 py-4 order-md-12">
+          <h2 class="d-none">sign</h2>
           <div class="row justify-content-center">
             <div class="sign-up col-6 p-4 border">
               <div class="d-flex">
                 <img src="assets/images/n-icon.png" alt="">
                 <p>START YOUR DAY WITH OUR TOP 5 ARTICLES</p>
               </div>
-              <form action="">
+              <form action="#">
                 <input type="email" name="email" id="email" placeholder="Email address">
                 <input class="btn btn-danger" type="submit" value="FREE SIGN UP">
               </form>
@@ -481,6 +476,7 @@
         </section>
 
         <section class="sponsored col-sm-12 col-md-6 my-2 order-md-12">
+          <h2 class="d-none">sponsored2</h2>
           <div class="py-4">
             <div>
               <a href="#"><img src="assets/img-sponsored2/nw-food-medicine-sponsored.jpg" alt=""></a>
@@ -594,7 +590,7 @@
               incredibly gullible," the journalist who conducted the original interview responded today.</p>
           </article>
           <section class="sponsored col-md-12 my-2">
-
+            <h2 class="d-none">sponsored</h2>
             <div class="py-4">
               <div>
                 <a href="#"><img src="assets/img-sponsored1/roborock-h6.jpg" alt=""></a>
@@ -678,53 +674,47 @@
             <p>The coronavirus pandemic has now cost 100,000 American lives. To mark the heartbreaking milestone,
               Newsweek's newsroom will fall silent for 100 seconds. We invite you to join us.</p>
           </article>
+
           <section class="heroes col-md-12 my-md-0">
             <h2 class="pt-3">Heroes of the Pandemic</h2>
             <div class="row row-cols-3">
               <figure class="col-12 col-md-4 px-md-1 mb-md-4">
                 <a href="#"><img class="img-fluid" src="assets/img-heroes-culture/isaac.jpg" alt="isaac"></a>
-                <a href="#">
-                  <figcaption class="pt-3">The Doctors and Nurses Crossing the Border Daily to Help Asylum Seekers
-                  </figcaption>
-                </a>
+                <figcaption class="pt-3"><a href="#">The Doctors and Nurses Crossing the Border Daily to Help Asylum
+                    Seekers</a>
+                </figcaption>
               </figure>
               <figure class="col-12 col-md-4 px-md-1">
                 <a href="#"><img class="img-fluid" src="assets/img-heroes-culture/evan-rosenberg.jpg" alt="evan"></a>
-                <a href="#">
-                  <figcaption class="pt-3">The Charity Helping Vulnerable Holocaust Survivors During the Pandemic
-                  </figcaption>
-                </a>
+                <figcaption class="pt-3"><a href="#">The Charity Helping Vulnerable Holocaust Survivors During the
+                    Pandemic</a>
+                </figcaption>
               </figure>
               <figure class="col-12 col-md-4 px-md-1">
                 <a href="#"><img class="img-fluid" src="assets/img-heroes-culture/tamara-mcgovern.jpg" alt="tamara"></a>
-                <a href="#">
-                  <figcaption class="pt-3">Women Launch Campaign Urging People to Donate Their Stimulus Checks
-                  </figcaption>
-                </a>
+                <figcaption class="pt-3"><a href="#">Women Launch Campaign Urging People to Donate Their Stimulus
+                    Checks</a>
+                </figcaption>
               </figure>
               <h2 class="pt-3 col-12">Culture & Travel</h2>
               <figure class="col-12 col-md-4 px-md-1">
                 <a href="#"><img class="img-fluid" src="assets/img-heroes-culture/bark-europa-tall-ship.jpg"
                     alt="ship"></a>
-                <a href="#">
-                  <figcaption class="pt-3">TTall Ship Sails 10,000 Miles From the End of the World During COVID-19
-                  </figcaption>
-                </a>
+                <figcaption class="pt-3"><a href="#">Tall Ship Sails 10,000 Miles From the End of the World During
+                    COVID-19</a>
+                </figcaption>
               </figure>
               <figure class="col-12 col-md-4 px-md-1">
                 <a href="#"><img class="img-fluid" src="assets/img-heroes-culture/gorilla.jpg" alt="gorilla"></a>
-                <a href="#">
-                  <figcaption class="pt-3">How Coronavirus—and Lack of Tourism—Impact East Africa's Gorillas
-                  </figcaption>
-                </a>
+                <figcaption class="pt-3"><a href="#">ow Coronavirus—and Lack of Tourism—Impact East Africa's
+                    Gorillas</a>
+                </figcaption>
               </figure>
               <figure class="col-12 col-md-4 px-md-1">
                 <a href="#"><img class="img-fluid"
                     src="assets/img-heroes-culture/manhattan-beach-california-family-photo.jpg" alt="beach"></a>
-                <a href="#">
-                  <figcaption class="pt-3">What Beaches Are Open Now? What to Know Before You Go
-                  </figcaption>
-                </a>
+                <figcaption class="pt-3"><a href="#">What Beaches Are Open Now? What to Know Before You Go</a>
+                </figcaption>
               </figure>
             </div>
           </section>
@@ -960,14 +950,15 @@
           </section>
 
           <section class="sign my-3 col-md-6 col-lg-12 py-4 mx-auto">
+            <h2 class="#">sign</h2>
             <div class="row justify-content-center">
               <div class="sign-up col-6 p-4 border">
                 <div class="d-flex">
                   <img src="assets/images/n-icon.png" alt="">
                   <p>START YOUR DAY WITH OUR TOP 5 ARTICLES</p>
                 </div>
-                <form action="">
-                  <input type="email" name="email" id="email" placeholder="Email address">
+                <form action="#">
+                  <input type="email" name="email" id="email-md" placeholder="Email address">
                   <input class="btn btn-danger" type="submit" value="FREE SIGN UP">
                 </form>
               </div>
@@ -975,6 +966,7 @@
           </section>
 
           <section class="sponsored col-md-7 col-lg-12 my-2 sticky-top mx-auto">
+            <h2 class="#">sponsored</h2>
             <div class="py-4">
               <div>
                 <a href="#"><img src="assets/img-sponsored2/nw-food-medicine-sponsored.jpg" alt=""></a>
@@ -1074,7 +1066,7 @@
           <img class="w-100 mag-img" src="assets/img-magazine/cul-uncharted-frozentreats-banner.jpg" alt="mag">
           <div class="p-2 font-weight-bold"><span class="bg-danger mag-cat p-1">Downtime</span><span
               class="ml-2 text-danger">Culture</span></div>
-          <h4>World's Finest Frozen Treats/h4>
+          <h4>World's Finest Frozen Treats</h4>
         </div>
         <div class="col-12 col-md-3">
           <img class="w-100 mag-img" src="assets/img-magazine/fea-china-banner.jpg" alt="mag">
